--- a/chapter_inviscid.tex
+++ b/chapter_inviscid.tex
@@ -21,6 +21,11 @@
 \input{sound_waves}
 
 
+\chapter{Work and energy}
+\label{ss:Euler_energy}
+\input{Euler_energy}
+
+
 \chapter{Potential flow}
 \input{potential_flow}
 
@@ -29,7 +34,3 @@
 \input{gravity_waves}
 
 \input{gravity_capillary_waves}
-
-\chapter{Work and energy}
-
-\input{Euler_energy}
